# radiology_agent_prompt_opinion

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  generate_demo_bundles.py  pyproject.toml  requirements.txt
critcom_agent/: agent.py  app.py
demo_bundles/: patient-001.json  patient-002.json  patient-003.json  patient-004.json  patient-005.json  patient-006.json  patient-007.json  patient-008.json  patient-009.json  patient-010.json
shared/: app_factory.py  fhir_hook.py  logging_utils.py  middleware.py
shared/tools/: __init__.py  critcom_tools.py
src/critcom/: __init__.py
src/critcom/classification/: classifier.py  prompts.py
src/critcom/fhir/: __init__.py  client.py  models.py
src/critcom/scripts/: seed.py
src/critcom/tools/: dispatch_communication.py  escalate.py  fetch_report_fhir.py  query_audit.py  resolve_provider.py  study.py  track_acknowledgment.py
